# dtscon

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  project.config
src/: Makefile.am  Makefile.in  curl.c  dtscon.c  dtscon.h  dtsldap.c  dtsxml.c  dtsxslt.c  genconf.c  genconf.c.save  ip4util.c  newt.c  nform.c  nmenu.c  openldap.c  util.c
src/include/: dtscon.h  private.h
